SSCS-10053- Initial application setup and configuring functional Test (#2)
* SSCS-10053- Component initialised from the init.sh file

* SSCS-10053- Repetition of sscs word removed

* SSCS-10053-Configuring functional test and port number

* sscs-10053-configuring Mutation tests  Reporting in Jenkins and smoke test

* SSCS-10053- Removed s2s url changes

* sscs-10053- s2s variable set to empty array

* sscs-10053- remove vault changes from maintf

* sscs-10053-added  git and pact  property config in gradle

* sscs-10053-removing duplicate dependency

* SSCS-10053- Repetition of sscs word removed

* SSCS-10053-Configuring functional test and port number

* SSCS-10053- Component initialised from the init.sh file

* sscs-10053-configuring Mutation tests  Reporting in Jenkins and smoke test

* SSCS-10053- Removed s2s url changes

* sscs-10053- s2s variable set to empty array

* sscs-10053- remove vault changes from maintf

* sscs-10053-added  git and pact  property config in gradle

* sscs-10053-removing duplicate dependency

* sscs-10053- changing springdoc version

* sscs-10053- resolving conflict

* SSCS-10053- Repetition of sscs word removed, configure functional tests, fix port number.

* SSCS-10053 Added git and pact  property config in gradle

* SSCS-10053 More configuration changes.

* SSCS-10053 Remove vault changes from maintf

* sscs-10053 adding processResources for explicit dependency

* sscs-10053 adding serenity plugin latest version

* sscs-10053 Fixing Dependancies vulnerabilities

* sscs-10053 dependency update for security vulnerability

* sscs-10053 Adding  sonar properties to match the rest of SSCS

* sscs-10053 removing deprecated code and updating file format with sscs standard

* sscs-10053 removing deprecated function and using standard sscs code format

* sscs-10053 remaning sscs-sscs-hearings-api folder to sscs-hearings-api

* sscs-10053 adding suppression code for dependency