@@ -1,3 +1,9 @@
+buildscript {
+  dependencies {
+    classpath("net.serenity-bdd:serenity-gradle-plugin:3.1.20")
+  }
+}
+
 plugins {
   id 'application'
   id 'checkstyle'
@@ -8,7 +14,24 @@ plugins {
   id 'org.owasp.dependencycheck' version '6.5.3'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.3'
+  id 'info.solidsoft.pitest' version '1.5.2'
+  id 'com.gorylenko.gradle-git-properties' version '2.3.1'
+  id 'au.com.dius.pact' version '4.2.14'
 }
+
+apply plugin: 'net.serenity-bdd.aggregator'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'info.solidsoft.pitest'
+
+gitProperties {
+ gitPropertiesDir = new File("${project.rootDir}/src/main/resources/uk/gov/hmcts/reform/sscs")
+  keys = ['git.commit.id', 'git.commit.time']
+  dateFormat = "yyyy-MM-dd'T'HH:mmZ"
+  dateFormatTimeZone = "GMT"
+}
+
+processResources.dependsOn(':generateGitProperties')
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
@@ -22,8 +45,8 @@ java {
 sourceSets {
   functionalTest {
     java {
-      compileClasspath += main.output
-      runtimeClasspath += main.output
+      compileClasspath += main.output + test.output
+      runtimeClasspath += main.output + test.output
       srcDir file('src/functionalTest/java')
     }
     resources.srcDir file('src/functionalTest/resources')
@@ -31,8 +54,8 @@ sourceSets {
 
   integrationTest {
     java {
-      compileClasspath += main.output
-      runtimeClasspath += main.output
+      compileClasspath += main.output + test.output
+      runtimeClasspath += main.output + test.output
       srcDir file('src/integrationTest/java')
     }
     resources.srcDir file('src/integrationTest/resources')
@@ -40,12 +63,27 @@ sourceSets {
 
   smokeTest {
     java {
-      compileClasspath += main.output
-      runtimeClasspath += main.output
+      compileClasspath += main.output + test.output
+      runtimeClasspath += main.output + test.output
       srcDir file('src/smokeTest/java')
     }
     resources.srcDir file('src/smokeTest/resources')
   }
+}
+
+task integration(type: Test) {
+  setTestClassesDirs(sourceSets.integrationTest.output.classesDirs)
+  setClasspath(sourceSets.integrationTest.runtimeClasspath)
+}
+
+task functional(type: Test) {
+  useJUnitPlatform()
+  group = 'Functional Tests'
+  description = 'Executes non-destructive functional tests in AAT against a running CCD and notification service'
+  setTestClassesDirs(sourceSets.smokeTest.output.classesDirs)
+  setClasspath(sourceSets.smokeTest.runtimeClasspath)
+  include "uk/gov/hmcts/reform/sscs/functional/**"
+
 }
 
 configurations {
@@ -80,27 +118,6 @@ test {
   failFast = true
 }
 
-task functional(type: Test) {
-  description = "Runs functional tests"
-  group = "Verification"
-  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-  classpath = sourceSets.functionalTest.runtimeClasspath
-}
-
-task integration(type: Test) {
-  description = "Runs integration tests"
-  group = "Verification"
-  testClassesDirs = sourceSets.integrationTest.output.classesDirs
-  classpath = sourceSets.integrationTest.runtimeClasspath
-  failFast = true
-}
-
-task smoke(type: Test) {
-  description = "Runs Smoke Tests"
-  testClassesDirs = sourceSets.smokeTest.output.classesDirs
-  classpath = sourceSets.smokeTest.runtimeClasspath
-}
-
 checkstyle {
   maxWarnings = 0
   toolVersion = '9.2.1'
@@ -109,7 +126,7 @@ checkstyle {
 
 pmd {
   toolVersion = "6.41.0"
-  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
+  sourceSets = [sourceSets.main]
   reportsDir = file("$project.buildDir/reports/pmd")
   // https://github.com/pmd/pmd/issues/876
   ruleSets = []
@@ -125,16 +142,38 @@ jacocoTestReport {
   }
 }
 
-project.tasks['sonarqube'].dependsOn jacocoTestReport
+project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
+check.dependsOn integration
+checkstyleMain.shouldRunAfter(compileJava)
+test.shouldRunAfter(checkstyleTest)
+integration.shouldRunAfter(checkstyleIntegrationTest)
+integration.shouldRunAfter(test)
 
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: spring-boot-template"
-    property "sonar.projectKey", "uk.gov.hmcts.reform:spring-boot-template"
+    property "sonar.projectName", "SSCS - Hearings Api"
+    property "sonar.projectKey", "SSCSHA"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.pitest.mode", "reuseReport"
+    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
+    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/sscs/HearingApiApplication.java" +
+      "src/main/java/uk/gov/hmcts/reform/sscs/config/**,"
   }
 }
+pitest {
+  junit5PluginVersion = '0.12'
+  targetClasses = ['uk.gov.hmcts.reform.sscs.*']
+  excludedClasses = [
+    'uk.gov.hmcts.reform.sscs.config.*',
+    'uk.gov.hmcts.reform.sscs.HearingApiApplication'
+  ]
+  threads = 10
+  outputFormats = ['XML', 'HTML']
+  timestampedReports = false
+  mutationThreshold = 80
+}
 
+project.tasks['pitest'].group = "Verification"
 // before committing a change, make sure task still works
 dependencyUpdates {
   def isNonStable = { String version ->
@@ -164,24 +203,50 @@ repositories {
   mavenLocal()
   mavenCentral()
   maven { url 'https://jitpack.io' }
+  // Requires authentication, if it gets here the library cannot be found!
+  maven {
+    url 'https://repo.spring.io/libs-milestone'
+  }
 }
 
+def versions =[
+  springdoc: '1.6.6',
+  logging: '5.1.7',
+  serenity: '3.1.20',
+  pitest: '1.5.2',
+  tomcat: '9.0.58',
+  junit: '5.7.2'
+]
+
 ext {
-  log4JVersion = "2.17.0"
+  log4JVersion = "2.17.1"
 }
 
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', {
+    exclude module: "spring-boot-starter-tomcat" // Because of CVE-2022-23181
+  }
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: versions.tomcat
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-el', version: versions.tomcat
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: versions.tomcat
+
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
 
-  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.6'
+  implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springdoc
 
-  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.0.0'
+  implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.logging
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
+
+  implementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
+  implementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
+  implementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
+  implementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+
+  //implementation group: 'com.github.hmcts',  name: 'auth-checker-lib', version: '2.1.5'
 
   testImplementation(platform('org.junit:junit-bom:5.8.2'))
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
@@ -189,15 +254,48 @@ dependencies {
     exclude group: 'junit', module: 'junit'
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
+  testImplementation "org.junit.vintage:junit-vintage-engine:${versions.junit}"
+
+  testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
+  testImplementation 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.5.2'
+  testImplementation 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+
+  functionalTestImplementation sourceSets.main.runtimeClasspath
+  functionalTestImplementation sourceSets.test.runtimeClasspath
+
+  smokeTestImplementation sourceSets.main.runtimeClasspath
+  smokeTestImplementation sourceSets.test.runtimeClasspath
+
+  constraints {
+    implementation(group: 'com.jhlabs', name: 'filters', version: '2.0.235-1') {
+      because 'CVE-2005-0406'
+    }
+    implementation(group: 'com.ibm.icu', name: 'icu4j', version: '70.1') {
+      because 'CVE-2020-21913'
+    }
+    implementation(group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.25') {
+      because 'CVE-2018-11797,CVE-2018-8036,CVE-2021-27807,CVE-2021-27906,CVE-2021-31811,CVE-2021-31812'
+    }
+    implementation(group: 'org.apache.pdfbox', name: 'xmpbox', version: '2.0.25') {
+      because 'CVE-2018-11797, CVE-2018-8036, CVE-2021-27807, CVE-2021-27906, CVE-2021-31811, CVE-2021-31812'
+    }
+    implementation(group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.64') {
+      because 'CVE-2020-15522'
+    }
+    implementation(group: 'com.thoughtworks.xstream', name: 'xstream', version: ' 1.4.19') {
+      because 'CVE-2021-43859'
+    }
+  }
+
 }
 
-mainClassName = 'uk.gov.hmcts.reform.demo.Application'
+mainClassName = 'uk.gov.hmcts.reform.sscs.HearingApiApplication'
 
 bootJar {
-  archiveFileName = "spring-boot-template.jar"
+  archiveFileName = "sscs-hearings-api.jar"
 
   manifest {
-    attributes('Implementation-Version': project.version.toString())
+    attributes('Implementation-Title': project.name, 'Implementation-Version': project.version.toString())
   }
 }
 
@@ -205,7 +303,43 @@ bootJar {
 rootProject.tasks.named("processSmokeTestResources") {
   duplicatesStrategy = 'include'
 }
+rootProject.tasks.named("processFunctionalTestResources") {
+  duplicatesStrategy = 'include'
+}
+
+task fortifyScan(type: JavaExec)  {
+  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
+project.ext {
+  pacticipant = 'sscs-hearings-api'
+  pacticipantVersion = getCheckedOutGitCommitHash()
+}
+
+pact {
+  broker {
+    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
+  }
+  publish {
+    pactDirectory = 'pacts'
+    tags = [System.getenv("PACT_BRANCH_NAME") ?:'Dev']
+    version = project.pacticipantVersion
+  }
+}
+
+static def getCheckedOutGitCommitHash() {
+  'git rev-parse --verify --short HEAD'.execute().text.trim()
+}
+
+run {
+  def debug = System.getProperty("debug")
+  if (debug == 'true') {
+    jvmArgs = ['-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5006']
+  }
+}
 
 wrapper {
-    distributionType = Wrapper.DistributionType.ALL
+  distributionType = Wrapper.DistributionType.ALL
 }
